--- a/front/src/lib/styles/pages/cv.css
+++ b/front/src/lib/styles/pages/cv.css
@@ -210,13 +210,6 @@
       &::after {
         transition-timing-function: ease-in;
         width: 110%;
-        @media (prefers-reduced-motion: reduce) {
-          animation-duration: 0.001s !important;
-          animation-iteration-count: 1 !important;
-          transition-delay: 0.001s !important;
-          transition-duration: 0.001s !important;
-          scroll-behavior: auto !important;
-        }
       }
     }
     header.item-basics {
@@ -231,26 +224,12 @@
         opacity: 1;
         transition-delay: 0;
         transition-duration: var(--transition-duration);
-        @media (prefers-reduced-motion: reduce) {
-          animation-duration: 0.001s !important;
-          animation-iteration-count: 1 !important;
-          transition-delay: 0.001s !important;
-          transition-duration: 0.001s !important;
-          scroll-behavior: auto !important;
-        }
       }
     }
     .experience-summary {
-      transition-duration: var(--transition-duration-md);
+      transition-duration: var(--transition-duration-slow);
       transition-property: color;
       transition-timing-function: var(--transition-timing-function);
-      @media (prefers-reduced-motion: reduce) {
-        animation-duration: 0.001s !important;
-        animation-iteration-count: 1 !important;
-        transition-delay: 0.001s !important;
-        transition-duration: 0.001s !important;
-        scroll-behavior: auto !important;
-      }
     }
     .skills {
       &:hover {
@@ -258,29 +237,15 @@
         .skill {
           /* display: inline-block; */
           /* filter: brightness(0.75); */
-          transition-delay: 333ms;
-          transition-duration: var(--transition-duration-md);
-          @media (prefers-reduced-motion: reduce) {
-            animation-duration: 0.001s !important;
-            animation-iteration-count: 1 !important;
-            transition-delay: 0.001s !important;
-            transition-duration: 0.001s !important;
-            scroll-behavior: auto !important;
-          }
+          transition-delay: var(--transition-duration);
+          transition-duration: var(--transition-duration-slow);
           &:hover,
           &:focus,
           &:focus-visible {
             opacity: 1;
             filter: brightness(1.25);
             transition-delay: 0s;
-            transition-duration: 200ms;
-            @media (prefers-reduced-motion: reduce) {
-              animation-duration: 0.001s !important;
-              animation-iteration-count: 1 !important;
-              transition-delay: 0.001s !important;
-              transition-duration: 0.001s !important;
-              scroll-behavior: auto !important;
-            }
+            transition-duration: var(--transition-duration-fast);
           }
         }
       }
@@ -300,7 +265,7 @@
     left: -2.5rem;
     transform: translateX(-1px);
     opacity: 1;
-    transition-duration: 215ms;
+    transition-duration: var(--transition-duration-fast);
     transition-property: transform, background-color, border-width;
     transition-timing-function: var(--transition-timing-function);
     will-change: opacity, transform;
@@ -310,13 +275,6 @@
     width: 1rem;
     height: 1rem;
     content: '';
-    @media (prefers-reduced-motion: reduce) {
-      animation-duration: 0.001s !important;
-      animation-iteration-count: 1 !important;
-      transition-delay: 0.001s !important;
-      transition-duration: 0.001s !important;
-      scroll-behavior: auto !important;
-    }
   }
   &:before {
     outline: 2px solid var(--highlight-clr);
@@ -328,13 +286,6 @@
   .item-title,
   .item-title::after {
     transition-timing-function: var(--transition-timing-function);
-    @media (prefers-reduced-motion: reduce) {
-      animation-duration: 0.001s !important;
-      animation-iteration-count: 1 !important;
-      transition-delay: 0.001s !important;
-      transition-duration: 0.001s !important;
-      scroll-behavior: auto !important;
-    }
   }
   .item-title {
     display: flex;
@@ -348,13 +299,6 @@
     color: var(--fg-clr-oo);
     font-size: 1.5rem;
     line-height: 1.2;
-    @media (prefers-reduced-motion: reduce) {
-      animation-duration: 0.001s !important;
-      animation-iteration-count: 1 !important;
-      transition-delay: 0.001s !important;
-      transition-duration: 0.001s !important;
-      scroll-behavior: auto !important;
-    }
     @media screen and (hover: none),
       (hover: on-demand),
       (-moz-touch-enabled: 1),
@@ -380,13 +324,6 @@
       padding-top: 0.75rem;
       width: 90%;
       content: '';
-      @media (prefers-reduced-motion: reduce) {
-        animation-duration: 0.001s !important;
-        animation-iteration-count: 1 !important;
-        transition-delay: 0.001s !important;
-        transition-duration: 0.001s !important;
-        scroll-behavior: auto !important;
-      }
       @media screen and (min-width: 640px) {
         padding-top: 1.25rem;
       }
@@ -399,7 +336,7 @@
   .experience-timeline-date,
   .experience-timeline-date--end {
     vertical-align: text-bottom;
-    transition-duration: 215ms;
+    transition-duration: var(--transition-duration-fast);
     transition-property: transform, opacity;
     transition-timing-function: var(--transition-timing-function);
     will-change: opacity, transform;
@@ -410,13 +347,6 @@
     font-family: var(--font-lb);
     text-transform: uppercase;
     white-space: nowrap;
-    @media (prefers-reduced-motion: reduce) {
-      animation-duration: 0.001s !important;
-      animation-iteration-count: 1 !important;
-      transition-delay: 0.001s !important;
-      transition-duration: 0.001s !important;
-      scroll-behavior: auto !important;
-    }
     @media screen and (min-width: 640px) {
       position: absolute;
       font-size: 0.875rem;
@@ -480,7 +410,7 @@
     bottom: 0.3rem;
     vertical-align: middle;
     opacity: 0;
-    transition-delay: 100ms;
+    transition-delay: var(--transition-duration-fastest);
     transition-duration: var(--transition-duration);
     transition-property: right opacity;
     transition-timing-function: ease-out;
@@ -488,13 +418,6 @@
     background-color: var(--primary-clr);
     width: 0.5rem;
     height: 0.5rem;
-    @media (prefers-reduced-motion: reduce) {
-      animation-duration: 0.001s !important;
-      animation-iteration-count: 1 !important;
-      transition-delay: 0.001s !important;
-      transition-duration: 0.001s !important;
-      scroll-behavior: auto !important;
-    }
     @media screen and (min-width: 768px) {
       display: inline-block;
     }
@@ -506,13 +429,6 @@
   transition-property: color;
   transition-timing-function: var(--transition-timing-function);
   color: var(--fg-clr-oo);
-  @media (prefers-reduced-motion: reduce) {
-    animation-duration: 0.001s !important;
-    animation-iteration-count: 1 !important;
-    transition-delay: 0.001s !important;
-    transition-duration: 0.001s !important;
-    scroll-behavior: auto !important;
-  }
 }
 
 .experience-info {
@@ -553,20 +469,13 @@
     align-items: flex-start;
     opacity: 0.7;
     filter: var(--skill-icon-brightness);
-    transition-duration: var(--transition-duration-md);
+    transition-duration: var(--transition-duration-slow);
     transition-property: filter, opacity;
     transition-timing-function: var(--transition-timing-function);
     margin: 0;
     border: 0;
     padding: 0.25rem;
     height: 1.5rem;
-    @media (prefers-reduced-motion: reduce) {
-      animation-duration: 0.001s !important;
-      animation-iteration-count: 1 !important;
-      transition-delay: 0.001s !important;
-      transition-duration: 0.001s !important;
-      scroll-behavior: auto !important;
-    }
     @media screen and (min-width: 640px) {
       align-items: flex-end;
       justify-items: flex-end;
@@ -583,13 +492,6 @@
       height: 100%;
       overflow: visible;
       color: var(--fg-clr);
-      @media (prefers-reduced-motion: reduce) {
-        animation-duration: 0.001s !important;
-        animation-iteration-count: 1 !important;
-        transition-delay: 0.001s !important;
-        transition-duration: 0.001s !important;
-        scroll-behavior: auto !important;
-      }
       &.loaded,
       &.failed {
         opacity: 1;
@@ -604,14 +506,7 @@
       opacity: 1;
       filter: var(--skill-icon-brightness-hover);
       transition-delay: 0s;
-      transition-duration: 200ms;
-      @media (prefers-reduced-motion: reduce) {
-        animation-duration: 0.001s !important;
-        animation-iteration-count: 1 !important;
-        transition-delay: 0.001s !important;
-        transition-duration: 0.001s !important;
-        scroll-behavior: auto !important;
-      }
+      transition-duration: var(--transition-duration-fast);
     }
   }
 }
@@ -713,16 +608,9 @@ input#date-toggle-checkbox:checked {
 label.date-toggle,
 label.date-toggle time,
 svg .calback {
-  transition-duration: var(--transition-duration-md);
+  transition-duration: var(--transition-duration-slow);
   transition-property: color, opacity, fill;
   transition-timing-function: var(--transition-timing-function);
-  @media (prefers-reduced-motion: reduce) {
-    animation-duration: 0.001s !important;
-    animation-iteration-count: 1 !important;
-    transition-delay: 0.001s !important;
-    transition-duration: 0.001s !important;
-    scroll-behavior: auto !important;
-  }
 }
 label.date-toggle {
   display: block;
@@ -758,10 +646,6 @@ label.date-toggle {
     font-size: 1.25rem;
     text-align: center;
     @media (prefers-reduced-motion: reduce) {
-      animation-duration: 0.001s !important;
-      animation-iteration-count: 1 !important;
-      transition-delay: 0.001s !important;
-      transition-duration: 0.001s !important;
       scroll-behavior: auto !important;
     }
   }
@@ -786,18 +670,5 @@ label.date-toggle {
     border: 10px solid red;
     padding: 2.5rem 0 0.25rem 0;
     height: 222rem;
-  }
-}
-@media (prefers-reduced-motion: reduce) {
-  *,
-  ::before,
-  ::after,
-  ::view-transition-old(*),
-  ::view-transition-new(*) {
-    animation-duration: 0.001s !important;
-    animation-iteration-count: 1 !important;
-    transition-delay: 0.001s !important;
-    transition-duration: 0.001s !important;
-    scroll-behavior: auto !important;
   }
 }
