--- a/front/src/lib/components/cv/SkillBreakdown/SkillBreakdown.css
+++ b/front/src/lib/components/cv/SkillBreakdown/SkillBreakdown.css
@@ -33,34 +33,20 @@
     height: 0.33rem;
     @media screen and (min-width: 640px) {
       animation: graphOut 0s;
-      animation-delay: 1s;
+      animation-delay: var(--transition-duration-slower);
       animation-fill-mode: forwards;
       transition-duration: var(--transition-duration-fast);
-      transition-property: width, transform;
+      transition-property: width, transform, z-index;
       transition-timing-function: var(--transition-timing-function);
       cursor: pointer;
       padding: 1rem 0;
-      @media (prefers-reduced-motion: reduce) and (width >= 1px) {
-        animation-duration: 0.001s !important;
-        animation-iteration-count: 1 !important;
-        transition-delay: 0.001s !important;
-        transition-duration: 0.001s !important;
-        scroll-behavior: auto !important;
-      }
       &:not(:hover),
       &:not(:focus),
       &:not(:focus-visible),
       &:not(:active) {
+        z-index: 0;
         &::before {
-          transition-delay: 50ms;
-          transition-duration: 500ms;
-          @media (prefers-reduced-motion: reduce) and (width >= 1px) {
-            animation-duration: 0.001s !important;
-            animation-iteration-count: 1 !important;
-            transition-delay: 0.001s !important;
-            transition-duration: 0.001s !important;
-            scroll-behavior: auto !important;
-          }
+          transition-duration: var(--transition-duration-slow);
         }
       }
       &:hover,
@@ -72,16 +58,8 @@
         z-index: 1;
         animation: graphIn 0s;
         animation-delay: 0s;
-        transition-delay: (333ms);
         box-shadow: var(--shadow-elevation-low);
         width: calc(var(--width) * 2 * 100%);
-        @media (prefers-reduced-motion: reduce) and (width >= 1px) {
-          animation-duration: 0.001s !important;
-          animation-iteration-count: 1 !important;
-          transition-delay: 0.001s !important;
-          transition-duration: 0.001s !important;
-          scroll-behavior: auto !important;
-        }
         /* overflow: visible; */
         /* filter: brightness(1.1); */
         /* transform: scale(1.01); */
@@ -90,13 +68,6 @@
           filter: contrast(10%) brightness(100%);
           transition-delay: 0s;
           transition-duration: var(--transition-duration-fast);
-          @media (prefers-reduced-motion: reduce) and (width >= 1px) {
-            animation-duration: 0.001s !important;
-            animation-iteration-count: 1 !important;
-            transition-delay: 0.001s !important;
-            transition-duration: 0.001s !important;
-            scroll-behavior: auto !important;
-          }
         }
         &:first-of-type {
           border-left: none;
@@ -121,7 +92,6 @@
       mix-blend-mode: var(--skill-graph-blend);
       /* mix-blend-mode: multiply; */
       filter: contrast(10%) brightness(100%) blur(0);
-      transition-delay: 1s;
       transition-duration: var(--transition-duration-fast);
       transition-property: background-color, filter, opacity, transform;
       will-change: opacity, background-color, filter, transform;
@@ -133,13 +103,6 @@
       width: 100%;
       height: 100%;
       content: '';
-      @media (prefers-reduced-motion: reduce) and (width >= 1px) {
-        animation-duration: 0.001s !important;
-        animation-iteration-count: 1 !important;
-        transition-delay: 0.001s !important;
-        transition-duration: 0.001s !important;
-        scroll-behavior: auto !important;
-      }
     }
     &__details {
       position: absolute;
@@ -153,13 +116,6 @@
       box-sizing: border-box;
       width: 100%;
       text-align: center;
-      @media (prefers-reduced-motion: reduce) and (width >= 1px) {
-        animation-duration: 0.001s !important;
-        animation-iteration-count: 1 !important;
-        transition-delay: 0.001s !important;
-        transition-duration: 0.001s !important;
-        scroll-behavior: auto !important;
-      }
       &__term,
       &__def,
       & dd,
@@ -186,13 +142,6 @@
         transition-property: max-height;
         transition-timing-function: var(--transition-timing-function);
         max-height: 0.5rem;
-        @media (prefers-reduced-motion: reduce) and (width >= 1px) {
-          animation-duration: 0.001s !important;
-          animation-iteration-count: 1 !important;
-          transition-delay: 0.001s !important;
-          transition-duration: 0.001s !important;
-          scroll-behavior: auto !important;
-        }
       }
     }
     &:first-of-type {
