--- a/front/src/lib/styles/components/posts-grid.css
+++ b/front/src/lib/styles/components/posts-grid.css
@@ -90,13 +90,12 @@
   }
   &:hover,
   &:focus,
-  &:focus,
   &:focus-visible,
   &:active {
     box-shadow: var(--posts-item-link-hover-box-shadow);
     background-color: rgba(0, 0, 0, 0);
     .link-bg {
-      transition-delay: 133ms;
+      transition-delay: var(--transition-duration-faster);
       background-color: rgba(var(--clr-neut-900-rgb), 0.6);
       color: rgba(255, 255, 255, 1);
     }
@@ -104,7 +103,7 @@
   .link-bg {
     align-self: center;
     transition-delay: 0;
-    transition-duration: var(--transition-duration-md);
+    transition-duration: var(--transition-duration-slow);
     transition-property: background-color, color;
     transition-timing-function: ease-out;
     border-radius: 0.5rem;
