--- a/front/src/routes/(layouts)/article.css
+++ b/front/src/routes/(layouts)/article.css
@@ -1,7 +1,6 @@
 .article {
   --title-offset: 2.77rem;
   position: relative;
-  padding: 1rem 2.33rem 0;
   min-width: 100%;
   overflow: none;
   &__header {
@@ -58,5 +57,11 @@
   }
   &__body {
     min-width: 75%;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .article {
+    padding: 1rem 2.33rem 0;
   }
 }
