--- a/front/src/lib/styles/components/nav.css
+++ b/front/src/lib/styles/components/nav.css
@@ -9,6 +9,7 @@
   opacity: 0;
   z-index: 1;
   transition:
+    box-shadow 0.3s ease,
     top 0.3s ease,
     opacity 0.3s ease,
     color 0.3s ease;
